FIX: null error with v4.0.0
Does not allow for null values

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -8,7 +8,7 @@
   env: 
     es6: true
     node: true
-  plugins: 
+  #plugins:  # can not be null
   globals: 
     document: false
     navigator: false
